--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -7,7 +7,8 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:padding="5dp">
+        android:padding="5dp"
+        android:background="#296964">
         <TabWidget
             android:id="@android:id/tabs"
             android:layout_width="fill_parent"
