--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -7,7 +7,7 @@
     
     <ScrollView android:layout_width="fill_parent"
     		android:layout_height="wrap_content"
-		android:layout_weight="1">>
+		android:layout_weight="1">
     <TableLayout android:layout_width="fill_parent"
     		android:layout_height="wrap_content">
     		<TableRow>
