--- a/res/layout/list.xml
+++ b/res/layout/list.xml
@@ -5,8 +5,14 @@
     android:layout_height="fill_parent"
     >
 <TextView  
+    android:id="@+id/listText"
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
     android:text="@string/list"
     />
+<ListView android:id="@android:id/list"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent"
+	android:drawSelectorOnTop="false"
+	/>
 </LinearLayout>
