--- a/res/layout/list.xml
+++ b/res/layout/list.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<TextView  
-    android:id="@+id/listText"
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/list"
-    />
-<ListView android:id="@android:id/list"
+	android:orientation="vertical"
 	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
-	android:drawSelectorOnTop="false"
-	/>
+	android:layout_height="fill_parent" >
+	<TextView
+		android:id="@+id/list_title"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:layout_margin="5dp"
+		android:textSize="20sp" />
+	<TextView
+		android:id="@+id/list_info"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:layout_margin="5dp"
+		android:textStyle="italic"
+		android:textColor="#FFFFFF"
+		android:textSize="14sp" />
 </LinearLayout>
