Added a delete all-button, and added error-handling when retrieving json-data from an url. closes #11

--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -7,5 +7,9 @@
               android:title="@string/add_url"
               android:checked="true"
               android:icon="@drawable/ic_menu_add" />
+        <item android:id="@+id/delete_all"
+              android:title="@string/delete_all"
+              android:checked="true"
+              android:icon="@drawable/ic_menu_delete" />
     </group>
 </menu>
